--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 				<p class="welcome-message text-left" style="font-size: 14pt; text-align: justify;">
 					For the <strong>IE track</strong>, we will use a combination of objective and subjective evaluations.
 				</p>
+                <div class="row">
+                    <img src="img/IR.png" width="100%">
+                </div>
+                <div class="row">
+                    <img src="img/IE.png" width="100%">
+                </div>
 				<p class="welcome-message text-left" style="font-size: 14pt; text-align: justify;">
 					For objective evaluation, we use FID and the structure similarity metric, SS. FID measures the realism of the generated images. Meanwhile, SS measures the similarity between the input user sketch and the edge map in the missing region extracted by XDoG. For subjective evaluation, we use MOS. We will have a team of about 40-50 subjects to evaluate the completed images pairwisely, where each subject is given two images at once and required to select a better one from the two.
 				</p>
