--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Learning-Based Image Inpainting</title>
+    <title>MMSP 2021 Grand Challenge</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
