--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
     </div>
 </div>
 
+<div id="Update" style="background-color: #F5F5F5;">
+    <div class="container"> <!-- Container -->
+        <div class="col-lg-10 col-lg-offset-1">
+            <div class="section-title text-center center">
+                <h2>Updates</h2>
+                <hr>
+                <ul class="welcome-message text-left" style="font-size: 14pt">
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>June 19, 2021. </strong> The validation data is now available at <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">link</a>.
+                    </li>
+
+                </ul>
+            </div>
+            
+        </div>
+    </div>
+</div>
 
 <div id="introduction">
     <div class="container"> <!-- Container -->
@@ -82,7 +99,7 @@
                     <strong>Training</strong> data is now available at <a href="http://img.cnbita.com/_ec46b71996e44d68866d6c7eef8946ee.zip?attname=train_img.zip">link</a>. Training set consists of around 1500 high-definition natural, complete images.
                 </p>
                 <p style="text-align: justify;">
-                    <strong>Validation</strong> set has two subsets that correspond to the two tracks: IR and IE. For validation set we will provide a mask for each image to indicate “missing areas” and a sketch map to provide the “structural guidance”
+                    <strong>Validation</strong> set has two subsets that correspond to the two tracks: IR and IE. For validation set we will provide a mask for each image to indicate "missing areas" and a sketch map to provide the "structural guidance". The validation data can be downloaded at <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">link</a>.
                 </p>
                 <p style="text-align: justify;">
                     <strong>Test set</strong> is similar in scale to the validation set, and for each test image we will provide incomplete image together with a mask and sketch map. The ground-truth of test images is not public.
