--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>June 29, 2021.</strong> The final testing data will be available on July 1st. Please fill in the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Sma9t1-6w0yuVfD7jOfeBVVWYbQhpXRIhGoTLAuZmjJUNFhQM09NNjVZM1JWOFM1UVBCVlZMS0hCWi4u">registration form</a> to acquire the the testing data for final submission. If you encounter any problem, please contact huyy AT pku dot edu dot cn.
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>June 19, 2021. </strong> The validation data is now available at <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">link</a>.
                     </li>
 
@@ -149,6 +152,12 @@
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>June 19, 2021: </strong>Release of <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">validation data</a>
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>July 1, 2021: </strong>Release of final testing data
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>July 19, 2021: </strong>Paper submission deadline
                     </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
@@ -211,7 +220,7 @@
                 <div class="col-lg-7" style="font-size: x-large">
                     <strong>Prof. Dong Liu<br>
                     </strong>University of Science and Technology of China<br>
-                    Email: dongeliu@ustc.edu.cn<br>
+                    Email: dongeliu AT ustc dot edu dot cn<br>
 					Homepage: <a href="http://staff.ustc.edu.cn/~dongeliu/">Link</a><br>
                 </div>
             </div>
@@ -224,7 +233,7 @@
                 <div class="col-lg-7" style="font-size: x-large">
                     <strong>Prof. Zhangyang (Atlas) Wang<br>
                     </strong>University of Texas at Austin<br>
-                    Email: atlaswang@utexas.edu<br>
+                    Email: atlaswang AT utexas dot edu<br>
 					Homepage: <a href="https://vita-group.github.io/">Link</a><br>
                 </div>
             </div>
@@ -237,7 +246,7 @@
                 <div class="col-lg-7" style="font-size: x-large">
                     <strong>Dr. Shuai Yang<br>
                     </strong>Nanyang Technological University<br>
-                    Email: shuai.yang@ntu.edu.sg<br>
+                    Email: shuai.yang AT ntu dot edu dot sg<br>
 					Homepage: <a href="https://williamyang1991.github.io/">Link</a><br>
                 </div>
             </div>
@@ -250,7 +259,7 @@
                 <div class="col-lg-7" style="font-size: x-large">
                     <strong>Yueyu Hu<br>
                     </strong>Peking University<br>
-                    Email: huyy@pku.edu.cn<br>
+                    Email: huyy AT pku dot edu dot cn<br>
 					Homepage: <a href="https://huzi96.github.io/">Link</a><br>
                 </div>
             </div>
