--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <hr>
                 <div class="welcome-message text-left" style="font-size: 14pt">
                 <p style="text-align: justify;">
-                    <strong>Training</strong> data is now available at <a href="http://img.cnbita.com/_ec46b71996e44d68866d6c7eef8946ee.zip?attname=train_img.zip">link</a>. Training set consists of around 1500 high-definition natural, complete images.
+                    <strong>Training</strong> data is now available at <a href="http://img.cnbita.com/_ec46b71996e44d68866d6c7eef8946ee.zip?attname=train_img.zip">link</a>. Training set consists of around 1500 high-definition natural, complete images. <br>Tips: To generate randomly masked training images, participants may visit this <a href="https://nv-adlr.github.io/publication/partialconv-inpainting">link</a> to look for random mask samples produced by NVIDIA.
                 </p>
                 <p style="text-align: justify;">
                     <strong>Validation</strong> set has two subsets that correspond to the two tracks: IR and IE. For validation set we will provide a mask for each image to indicate "missing areas" and a sketch map to provide the "structural guidance". The validation data can be downloaded at <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">link</a>.
