--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>July 19, 2021.</strong> The deadline to submit the final testing result has been extended to <strong>Sept. 14, 2021</strong>.
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>June 29, 2021.</strong> The final testing data will be available on July 1st. Please fill in the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Sma9t1-6w0yuVfD7jOfeBVVWYbQhpXRIhGoTLAuZmjJUNFhQM09NNjVZM1JWOFM1UVBCVlZMS0hCWi4u">registration form</a> to acquire the the testing data for final submission. If you encounter any problem, please contact huyy AT pku dot edu dot cn.
                     </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
@@ -157,23 +160,21 @@
                     <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>July 1, 2021: </strong>Release of final testing data
                     </li>
+                    
                     <li class="welcome-message text-left" style="padding-top: 6px;">
-                        <strong>July 19, 2021: </strong>Paper submission deadline
-                    </li>
-                    <li class="welcome-message text-left" style="padding-top: 6px;">
-                        <strong>July 19, 2021: </strong>Test image submission deadline
+                        <s>July 19, 2021: Test image submission deadline</s>
                     </li>
 
                     <li class="welcome-message text-left" style="padding-top: 6px;">
-                        <strong>August 2, 2021: </strong>Paper acceptance notification
+                        <strong>Sept. 14, 2021: </strong>Test image submission deadline
                     </li>
 
                     <li class="welcome-message text-left" style="padding-top: 6px;">
-                        <strong>August 2, 2021: </strong>Evaluation results announcement
+                        <strong>Oct. 5, 2021: </strong>Evaluation results announcement
                     </li>
 
                     <li class="welcome-message text-left" style="padding-top: 6px;">
-                        <strong>August 9, 2021: </strong>Camera-ready paper submission deadline
+                        <strong>Oct. 6-8, 2021: </strong>IEEE MMSP 2021
                     </li>
 
                 </ul>
@@ -190,10 +191,10 @@
                 <hr>
                 <div class="welcome-message text-left" style="font-size: 14pt">
                 <p>
-                	By <strong>July 19, 2021</strong>, participants should submit paper and test result (i.e. completed images).
+                	By <strong>Sept. 14, 2021</strong>, participants should the tests result (i.e. completed images).
                 </p>
                 <p>
-                	By <strong>July 20, 2021</strong>, participants should to submit their (testing) code and model for verification purpose.
+                	By <strong>Sept. 15, 2021</strong>, participants should to submit their (testing) code and model for verification purpose.
                 </p>
                 <p>
                 	We will provide an uploading service for participants.
