--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>August 13, 2021. </strong> You may refer to the <a href="faq.html">FAQ</a> page for more information about the challenge.
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>June 29, 2021.</strong> The final testing data will be available on July 1st. Please fill in the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Sma9t1-6w0yuVfD7jOfeBVVWYbQhpXRIhGoTLAuZmjJUNFhQM09NNjVZM1JWOFM1UVBCVlZMS0hCWi4u">registration form</a> to acquire the the testing data for final submission. If you encounter any problem, please contact huyy AT pku dot edu dot cn.
                     </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>June 19, 2021. </strong> The validation data is now available at <a href="https://pkueducn-my.sharepoint.com/:f:/g/personal/huyy_pku_edu_cn/EqE1CnbHujBMrFmFyt6ZHykBLwnXnH0tqKj4srxVfWJk1g?e=1H8UM7">link</a>.
                     </li>
-
                 </ul>
             </div>
             
