--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>August 13, 2021. </strong> You may refer to the <a href="faq.html">FAQ</a> page for more information about the challenge.
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>July 19, 2021.</strong> The deadline to submit the final testing result has been extended to <strong>Sept. 14, 2021</strong>.
                     </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
