--- a/faq.html
+++ b/faq.html
@@ -66,6 +66,10 @@
                         <strong>How are the edge maps generated?</strong><br>
                         The edge maps for the IR task is generated with the <a href="https://github.com/CemalUnal/XDoG-Filter">XDoG filter</a>. For details about the parameters, please refer to the MATLAB <a href="XDoG_Filter.m">script</a>.
                     </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>How to submit?</strong><br>
+                        Please prepare the outputs image of the IR and IE tasks, organize them according to the directory structure specified <a href="Submission_Structure.txt">here</a>, zip them, and upload it to an accessible file hosting service (Microsoft OneDrive recommended). Please fill in the form at this <a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__forms.office.com_Pages_ResponsePage.aspx-3Fid-3DDQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa-5F-5FaswwlZUOE9GU1U4TjA1TE05VEY5NlJDNURGUk5XMy4u&d=DwMGaQ&c=slrrB7dE8n7gBJbeO0g-IQ&r=71rHYyFor5-SBKsGaBkfiQ&m=EH42C1pB7kHfq8RNXfbkFek4PGKSm-g3Nnnxtvdpeuc&s=Yrn-CqXjsXhZvPra84QNWncP65XApAa36X1GyGZY1Og&e=">link</a> by indicating your team name and the link to your submission.
+                    </li>
 
                 </ul>
             </div>
