--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
                     <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>September 9, 2021. </strong> Please refer to the <a href="faq.html">submission guidelines</a> to submit your results.
+                    </li>
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>August 13, 2021. </strong> You may refer to the <a href="faq.html">FAQ</a> page for more information about the challenge.
                     </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
