--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                 </div>
                 <div class="col-lg-7" style="font-size: x-large">
                     <strong>Yueyu Hu<br>
-                    </strong>Peking University<br>
-                    Email: huyy AT pku dot edu dot cn<br>
+                    </strong>New York University<br>
+                    Email: yyhu AT nyu dot edu<br>
 					Homepage: <a href="https://huzi96.github.io/">Link</a><br>
                 </div>
             </div>
