--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
     </div>
 </div>
 
-<div id="Update" style="background-color: #F5F5F5;">
+<div id="Update" style="">
     <div class="container"> <!-- Container -->
         <div class="col-lg-10 col-lg-offset-1">
             <div class="section-title text-center center">
                 <h2>Updates</h2>
                 <hr>
                 <ul class="welcome-message text-left" style="font-size: 14pt">
+                    <li class="welcome-message text-left" style="padding-top: 6px;">
+                        <strong>September 23, 2021. </strong> Our session is schedued to be held on <strong>October 8th at 16:30 Finland time UTC+3 </strong> (which is 21:30 Beijing UTC+8 and 06:30 Seattle UTC-7 on the same day).
+                    </li>
                     <li class="welcome-message text-left" style="padding-top: 6px;">
                         <strong>September 9, 2021. </strong> Please refer to the <a href="faq.html">submission guidelines</a> to submit your results.
                     </li>
@@ -80,6 +83,35 @@
                 </ul>
             </div>
             
+        </div>
+    </div>
+</div>
+
+
+<div id="Update" style="background-color: #F5F5F5;">
+    <div class="container"> <!-- Container -->
+        <div class="col-lg-10 col-lg-offset-1">
+            <div class="section-title text-center center">
+                <h2>Invited Keynote Speaker</h2>
+                <hr>
+                <div class="row">
+                    <div class="">
+                        <img src="img/keynote_speaker.jpg" width="180px" style="border-radius: 50%; border: solid rgb(243,207,78) thick" class="img-rounded">
+                    </div>
+                    <div style="text-align: justify; font-size: large;">
+                        <strong>Tianfan Xue</strong><br>
+                        <p>Dr. Tianfan Xue is a researcher in the computational photography team in Google Research. He received his Ph.D. degree from the Computer Science and Artificial Intelligence Laboratory (CSAIL) of Massachusetts Institute of Technology in 2017. He also served as the web chair of CVPR 2020. His research focuses on increasing accessibility of computational photography networks to millions of users: making them fast, robust, and less data-hungry.</p>
+                        <strong>Why simulated data is important and how to use them in image processing</strong><br>
+                        <p>
+                            Deep neural networks have demonstrated impressive performance in many tasks in computer vision, speech recognition, and natural language processing. One of the main reasons for its success is the usage of big training data with manual labels. However, for many image processing tasks, like denoising or reflection removal, it is often hard to get the ground truth output on a large dataset. Thus, researchers often face the dilemma: either use a small training set that consists of real-world input and ground truth output, or use a large simulated dataset that may be different from the real images.
+                        </p>
+                        <p>
+                            In this talk, we will illustrate that, with a properly designed simulation pipeline, the networks trained on simulated data generalize well to real images. We will demonstrate the power of simulated data on 3 image processing tasks: dual-view reflection removal, raw image denoising, and flare removal. We will also discuss some design principles of how to build a better simulation pipeline.
+
+                        </p>
+                    </div>
+                </div>
+             </div>
         </div>
     </div>
 </div>
